# rtcamp08-denoiserExample

./: .gitmodules  CMakeLists.txt  README.md  utility.h
assets/: albedo.hdr  color.hdr  normal.hdr
assets/breakfast_1spp/: albedo.hdr  normal.hdr
assets/breakfast_64spp/: albedo.hdr  normal.hdr
assets/cornell_64spp/: albedo.hdr  color.hdr  normal.hdr
src/: denoiser.cpp  denoiser.h  main.cpp  utility.cpp  utility.h
